--- a/mrGraphics/.classpath
+++ b/mrGraphics/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="commons-cli-1.3.1.jar"/>
-	<classpathentry kind="lib" path="log4j-api-2.0-rc1.jar"/>
-	<classpathentry kind="lib" path="log4j-core-2.0-rc1.jar"/>
 	<classpathentry kind="lib" path="/everythingbuild/libraries/mrservermisc.jar"/>
 	<classpathentry kind="lib" path="/everythingbuild/scenarios/mrscenariofootball.jar"/>
+	<classpathentry kind="lib" path="/everythingbuild/librariesexternal/log4j-api-2.0-rc1.jar"/>
+	<classpathentry kind="lib" path="/everythingbuild/librariesexternal/log4j-core-2.0-rc1.jar"/>
+	<classpathentry kind="lib" path="/everythingbuild/librariesexternal/commons-cli-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
